// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table renders correctly 1`] = `
<DocumentFragment>
  .cache-hitq7g {
  table-layout: fixed;
  width: 100%;
  border-collapse: collapse;
}

.cache-6q709f {
  border: 0;
  border-bottom-width: 1px;
  border-color: #D4DAE7;
  border-style: solid;
}

.cache-o7wo1m {
  color: #4A4F62;
}

.cache-o7wo1m a {
  color: inherit;
}

.cache-o7wo1m tr:nth-of-type(even) {
  background-color: #FCFCFD;
}

.cache-o7wo1m:hover {
  color: #4F0599;
}

.cache-o7wo1m:hover td:first-of-type {
  font-weight: 500;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-o7wo1m [data-visibility='hover'] {
  -webkit-transition: opacity 150ms;
  transition: opacity 150ms;
  opacity: 0;
  pointer-events: none;
  visibility: hidden;
}

.cache-o7wo1m:hover [data-visibility='hover'] {
  opacity: 1;
  pointer-events: auto;
  visibility: visible;
}

.cache-1x5oop7 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  color: #B2B6C3;
  text-align: left;
  padding: 12px 16px;
  font-size: 14px;
  line-height: 24px;
}

.cache-gdhytg {
  overflow: hidden;
  white-space: nowrap;
  padding: 12px 16px;
  font-size: 14px;
  line-height: 24px;
}

<table
    class="efhaznt5 cache-hitq7g"
  >
    <thead
      class="efhaznt4 cache-6q709f"
    >
      <tr
        class="efhaznt3 cache-o7wo1m"
      >
        <th
          class="efhaznt2 cache-1x5oop7"
        >
          ID
        </th>
        <th
          class="efhaznt2 cache-1x5oop7"
        >
          Status
        </th>
        <th
          class="efhaznt2 cache-1x5oop7"
        >
          Date
        </th>
      </tr>
    </thead>
    <tbody
      class="cache-3svqc9"
    >
      <tr
        class="efhaznt3 cache-o7wo1m"
      >
        <td
          class="efhaznt1 cache-gdhytg"
        >
          165
        </td>
        <td
          class="efhaznt1 cache-gdhytg"
        >
          Ongoing
        </td>
        <td
          class="efhaznt1 cache-gdhytg"
        >
          Yesterday
        </td>
      </tr>
      <tr
        class="efhaznt3 cache-o7wo1m"
      >
        <td
          class="efhaznt1 cache-gdhytg"
        >
          56
        </td>
        <td
          class="efhaznt1 cache-gdhytg"
        >
          Resolved
        </td>
        <td
          class="efhaznt1 cache-gdhytg"
        >
          1 hour ago
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Table renders correctly while loading 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cache-hitq7g {
  table-layout: fixed;
  width: 100%;
  border-collapse: collapse;
}

.cache-6q709f {
  border: 0;
  border-bottom-width: 1px;
  border-color: #D4DAE7;
  border-style: solid;
}

.cache-o7wo1m {
  color: #4A4F62;
}

.cache-o7wo1m a {
  color: inherit;
}

.cache-o7wo1m tr:nth-of-type(even) {
  background-color: #FCFCFD;
}

.cache-o7wo1m:hover {
  color: #4F0599;
}

.cache-o7wo1m:hover td:first-of-type {
  font-weight: 500;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-o7wo1m [data-visibility='hover'] {
  -webkit-transition: opacity 150ms;
  transition: opacity 150ms;
  opacity: 0;
  pointer-events: none;
  visibility: hidden;
}

.cache-o7wo1m:hover [data-visibility='hover'] {
  opacity: 1;
  pointer-events: auto;
  visibility: visible;
}

.cache-1x5oop7 {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  color: #B2B6C3;
  text-align: left;
  padding: 12px 16px;
  font-size: 14px;
  line-height: 24px;
}

.cache-1q4tkq6 {
  overflow: hidden;
  white-space: nowrap;
  padding: 12px 16px;
  font-size: 14px;
  line-height: 24px;
}

.cache-1q4tkq6.cache-1q4tkq6 {
  height: 80px;
  position: relative;
}

.cache-1gn3ydk {
  position: absolute;
  top: 16px;
  left: 50%;
}

.cache-1mntgth-ActivityIndicator {
  -webkit-animation: animation-0 0.75s linear infinite;
  animation: animation-0 0.75s linear infinite;
}

.cache-wxrv4d-ActivityIndicator {
  -webkit-transition: stroke-dashoffset 0.5s ease 0s;
  transition: stroke-dashoffset 0.5s ease 0s;
}

<table
    class="efhaznt5 cache-hitq7g"
  >
    <thead
      class="efhaznt4 cache-6q709f"
    >
      <tr
        class="efhaznt3 cache-o7wo1m"
      >
        <th
          class="efhaznt2 cache-1x5oop7"
        >
          ID
        </th>
        <th
          class="efhaznt2 cache-1x5oop7"
        >
          Date
        </th>
      </tr>
    </thead>
    <tbody
      class="cache-3svqc9"
    >
      <tr
        class="efhaznt3 cache-o7wo1m"
      >
        <td
          class="efhaznt1 cache-1q4tkq6"
          colspan="2"
        >
          <div
            class="efhaznt0 cache-1gn3ydk"
          >
            <svg
              aria-label="Loading"
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="20"
              aria-valuetext="20%"
              class="cache-1mntgth-ActivityIndicator"
              role="progressbar"
              style="height: 40px; width: 40px;"
              viewBox="0 0 100 100"
            >
              <circle
                cx="50"
                cy="50"
                fill="none"
                r="42"
                stroke="#D4DAE7"
                stroke-width="16"
              />
              <circle
                class="cache-wxrv4d-ActivityIndicator"
                cx="50"
                cy="50"
                fill="none"
                r="42"
                stroke="#4F0599"
                stroke-dasharray="263.89378290154264"
                stroke-dashoffset="211.11502632123413"
                stroke-linecap="round"
                stroke-width="16"
              />
            </svg>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
